--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
           </div>
           <div class="row voffset-lg voffset">
             <p class="col-xs-12 col-md-8 col-md-offset-2 text-center citation">
-              "La chouette agence est une excellente agence web ! Les web
-              designers ont réussi à capturer l'essence de notre entreprise et à
-              l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en
-              ligne à Lyon."<br />
+              "La chouette agence est une excellente agence web ! Les<br />web
+              designers ont réussi à capturer l'essence de notre<br />entreprise
+              et à l'intégrer à notre site. Cela nous a aidé à<br />doubler nos
+              ventes en ligne à Lyon."<br />
               <span class="citation-auteur"
                 >Maxime Guibard, PDG de À vos fourchettes</span
               >
@@ -250,7 +250,8 @@
         <div class="container bloc-lg">
           <div class="row">
             <p class="col-sm-12 text-center sub-title-2">
-              Nous travaillons avec beaucoup de clients, voici nos réalisations.
+              Nous travaillons avec beaucoup de clients,<br />
+              voici nos réalisations.
             </p>
           </div>
           <div class="row tight-width-whitespace portfolio-row">
@@ -373,7 +374,7 @@
         <div class="container bloc-sm">
           <div class="row">
             <div class="col-sm-12">
-              <p class="text-center white title-footer">
+              <p class="text-center title-footer">
                 La chouette agence - Agence web basée à Lyon.<br />
               </p>
               <div class="row row-no-gutters social">
