--- a/page2.html
+++ b/page2.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="Default">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <meta name="keywords" content="" />
     <meta
       name="description"
       content="Contactez La chouette agence pour vos projets de webdesign dans la région Lyonnaise"
@@ -40,29 +39,15 @@
               <a class="navbar-brand" href="index.html"
                 ><img
                   src="img/la-chouette-agence.webp"
-                  alt="Logo text la chouette Agence"
+                  alt="Logo texte de la chouette agence"
                   height="40"
               /></a>
-              <button
-                id="nav-toggle"
-                type="button"
-                class="ui-navbar-toggle navbar-toggle"
-                data-toggle="collapse"
-                data-target=".navbar-1"
-              >
-                <span class="sr-only">Toggle navigation</span
-                ><span class="icon-bar"></span><span class="icon-bar"></span
-                ><span class="icon-bar"></span>
-              </button>
-            </div>
-            <div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
               <ul class="site-navigation nav navbar-nav">
-                <li>
+                <li class="li-contact">
                   <a href="index.html">Accueil</a>
                 </li>
-                <li></li>
                 <li>
-                  <a href="page2.html">page2 &gt;</a>
+                  <a href="page2.html">Contact</a>
                 </li>
               </ul>
             </div>
@@ -86,10 +71,8 @@
         <div class="container bloc-lg">
           <div class="row">
             <div class="col-sm-12">
-              <h1 class="text-center hero-bloc-text tc-white">
-                Parlons web design !
-              </h1>
-              <p class="text-center mg-lg tc-white tight-width-whitespace">
+              <h1 class="text-center hero-bloc-text">Parlons web design !</h1>
+              <p class="text-center mg-lg tight-width-whitespace">
                 Nous sommes ravis que vous souhaitiez collaborer avec notre
                 agence.<br />
                 Parlez-nous de votre projet en complétant le formulaire
@@ -183,7 +166,7 @@
         <div class="container bloc-sm">
           <div class="row">
             <div class="col-sm-12">
-              <p class="text-center white">
+              <p class="text-center title-footer">
                 La chouette agence - Agence web basée à Lyon.<br />
               </p>
               <div class="row row-no-gutters social">
