--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                   </li>
                   <li></li>
                   <li>
-                    <a href="page2.html">Contact</a>
+                    <a href="contact.html">Contact</a>
                   </li>
                 </ul>
               </div>
@@ -107,7 +107,7 @@
                 </h1>
                 <div class="text-center">
                   <a
-                    href="page2.html"
+                    href="contact.html"
                     class="
                       btn btn-lg btn-clean btn-rd
                       cta-hero
@@ -256,7 +256,7 @@
                     travaillerons ensemble pour créer des sites beau et bien
                     structurés, qui seront facilement trouvable sur les moteurs
                     de recherche.
-                    <br /><br /><a class="ltc-white bold-link" href="page2.html"
+                    <br /><br /><a class="ltc-white bold-link" href="contact.html"
                       >Contactez notre équipe</a
                     ><br />
                   </p>
@@ -397,7 +397,7 @@
               </h2>
               <div class="col-sm-12 text-center">
                 <a
-                  href="page2.html"
+                  href="contact.html"
                   class="
                     btn btn-atomic-tangerine btn-clean btn-rd btn-lg
                     cta-hero
